--- a/msmtp/.msmtprc
+++ b/msmtp/.msmtprc
@@ -13,3 +13,4 @@ from abdullah@abdullah.today
 passwordeval "echo $(gpg --batch -q --decrypt ~/.local/share/misc/abdullah.gpg)"
 
 account default: ak
+# vim:ft=msmtp
