adding bspwm and polybar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -78,7 +78,7 @@ setw -g window-status-current-format "#[bg=colour25, fg=colour14, bold] #W "
 
 # Right status
 set -g status-right-length 100
-set -g status-right  '#(~/bin/tmux-status)'
+set -g status-right  '#(~/.local/bin/tmux-status)'
 set -g status-left-length 50
 set -g status-left ''
 
