added different changes in different parts of configurations days before, can't remember which one is changed and where, lazy enough to scroll up down ;-)

--- a/compton/.config/compton/compton.conf
+++ b/compton/.config/compton/compton.conf
@@ -33,7 +33,8 @@ shadow-exclude = [
  "class_g ?= 'Notify-osd'",
  "class_g ?= 'Cairo-dock'",
  "class_g ?= 'Xfce4-notifyd'",
- "class_g ?= 'Xfce4-power-manager'"
+ "class_g ?= 'Xfce4-power-manager'",
+ "class_g ?= 'Polybar'"
 ];
 
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
