--- a/systemd/.config/systemd/user/beautify.service
+++ b/systemd/.config/systemd/user/beautify.service
@@ -4,7 +4,7 @@ After=xorg.target
 
 [Service]
 Environment=DISPLAY=:0
-ExecStart=/home/ak/bin/beautify /home/ak/pix/wall/collection 300
+ExecStart=/home/ak/.local/bin/beautify /home/ak/pix/wall/collection 300
 Restart=always
 
 [Install]
