utf-8 support for tmux status

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,9 @@ bind ` send-prefix
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
 
+# utf-8 support in status bar
+set -g status-utf8 on
+
 # Reload the config
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
 
