redshift changed configurations

--- a/redshift/.config/redshift/redshift.conf
+++ b/redshift/.config/redshift/redshift.conf
@@ -1,10 +1,11 @@
 [redshift]
-temp-day=6000
-temp-night=4800
+temp-day=5000
+temp-night=1900
 fade=1
-gamma=1.000:1.000:1.000
+gamma=0.8:0.7:0.8
 location-provider=manual
-adjustment-method=vidmode
+adjustment-method=randr
+transition=1
 
 [manual]
 lat=32.95
@@ -12,3 +13,4 @@ lon=72.19
 
 [randr]
 screen=0
+crtc=0
