--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
 
 # utf-8 support in status bar
-set -g status-utf8 on
+#set -g status-utf8 on
 
 # Reload the config
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
@@ -96,7 +96,7 @@ set-option -g visual-silence off
 set -g clock-mode-colour colour20
 
 # urlview
-run-shell ~/bin/tmux.urlview
+run-shell $HOME/.local/bin/tmux.urlview
 
 # resize panes
 setw -g aggressive-resize on
