configured termite with transparency

--- a/compton/.config/compton/compton.conf
+++ b/compton/.config/compton/compton.conf
@@ -58,5 +58,7 @@ wintypes:
 
 opacity-rule = [
   "90:class_g = 'URxvt' && focused",
-  "60:class_g = 'URxvt' && !focused"
+  "60:class_g = 'URxvt' && !focused",
+  "85:class_g = 'Termite' && focused",
+  "55:class_g = 'Termite' && !focused"
 ];
