--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -13,6 +13,7 @@ screenchange = true
 
 [bar/default]
 #monitor = ${env:MONITOR:eDP-1}
+monitor = eDP1
 bottom = true
 width = 100%
 height = 25
@@ -578,6 +579,9 @@ padding-right = 1
 module-margin-left = 2
 module-margin-right = 2
 
+[bar/hdmi]
+inherit = bar/default
+monitor = HDMI2
 
 
 ; vim:ft=dosini
