--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -12,15 +12,25 @@ alert = ${xrdb:polybar*color13}
 [settings]
 screenchange-reload = true
 screenchange = true
+throttle-output = 5
+throttle-output-for = 10
+throttle-input-for = 30
+compositing-background = source
+compositing-foreground = over
+compositing-overline = over
+compositing-underline = over
+compositing-border = over
+pseudo-transparency = true
 
 
 [global/wm]
-margin-top = 5
-margin-bottom = 5
+margin-top = 0
+#margin-bottom = 0
 
 
 [bar/default]
 #monitor = ${env:MONITOR:eDP-1}
+monitor-fallback = eDP-1
 bottom = true
 width = 100%
 height = 25
@@ -42,8 +52,8 @@ module-margin-right = 2
 font-0 =  FontAwesome
 font-1 = DejaVu Sans:pixelsize=11
 #modules-left = date wlan memory cpu xbacklight mic pavolume battery abdullah gmail
-modules-left = date wlan memory cpu pulseaudio xbacklight temperature battery 
-#modules-center = tags
+modules-left = date wlan memory cpu pulseaudio backlight temperature battery 
+#modules-center = xworkspaces
 modules-center = bspwm
 modules-right = mpd-new
 #modules-right =  mpd mic pavolume backlight memory cpu battery date menu
@@ -52,36 +62,61 @@ tray-padding = 6
 tray-background = #24292A00
 wm-restack = bspwm
 override-redirect = false
-scroll-up = bspwm-wsnext
-scroll-down = bspwm-wsprev
+scroll-up = bspwm-desknext
+scroll-down = bspwm-deskprev
 
 
 [module/bspwm]
 type = internal/bspwm
-#label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 3
 pin-workspaces = true
-#label-occupied = %index%
-label-occupied-padding = 3
 inline-mode = false
-#label-urgent = %index%!
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
+fuzzy-match = false
+ws-icon-0 = "I"
+ws-icon-1 = "II"
+ws-icon-2 = "III"
+ws-icon-3 = "IV"
+ws-icon-4 = "V"
+ws-icon-5 = "VI"
+ws-icon-6 = "VII"
+ws-icon-7 = "VIII"
+ws-icon-8 = "IX"
+ws-icon-9 = "X"
+format = <label-state> <label-mode>
+label-monitor = %name%
+label-dimmed-foreground = #555
+label-dimmed-focused-background = #f00
+label-focused = %icon% %name%
+label-focused-underline= ${colors.primary}
+label-focused-foreground = #f00000
+label-occupied = %icon% %name%
+label-occupied-underline = #555555
+label-urgent = %icon% %name%
+label-urgent-underline = ${colors.primary}
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 3
-#label-empty = %index%
+label-empty = %icon% %name%
 label-empty-foreground = ${colors.foreground-alt}
+label-monocle = 
+label-tiled = 
+label-fullscreen = 
+label-floating = 
+label-pseudotiled = P
+label-locked = 
+label-locked-foreground = #bd2c40
+label-sticky = 
+label-sticky-foreground = #fba922
+label-private = 
+label-private-foreground = #bd2c40
+label-marked = M
+label-separator = 
+label-separator-padding = 3
+label-separator-foreground = #ffb52a
+label-occupied-padding = 3
 label-empty-padding = 3
-ws-icon-0 = "I;"
-ws-icon-1 = "II;"
-ws-icon-2 = "III;"
-ws-icon-3 = "IV;"
-ws-icon-4 = "V;"
-ws-icon-5 = "VI;"
-ws-icon-6 = "VII;"
-ws-icon-7 = "VIII;"
-ws-icon-8 = "IX;"
-ws-icon-9 = "X;"
+label-urgent-padding = 3
+
 
 
 [module/xwindow]
@@ -102,6 +137,24 @@ ramp-1 = 🌔
 ramp-2 = 🌓
 ramp-3 = 🌒
 ramp-4 = 🌑
+
+
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+format = <ramp><label>
+label = %percentage%%
+label-foreground = #3EC13F
+format-padding = 1
+ramp-0 = 🌕
+ramp-1 = 🌔
+ramp-2 = 🌓
+ramp-3 = 🌒
+ramp-4 = 🌑
+enable-scroll = true
+scroll-up = exec 'xbacklight + 5'
+scroll-down = exec 'xbacklight - 5'
+
 
 [module/pavolume]
 type = custom/script
@@ -555,7 +608,7 @@ override-redirect = true
 ;width = 55%
 ;height = 26
 ;offset-x = 45%
-modules-left = date wlan memory cpu pulseaudio xbacklight battery 
+modules-left = date wlan memory cpu pulseaudio backlight-acpi battery 
 modules-right = mpd-new
 modules-center = window_switch
 font-0 =  FontAwesome
