--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -14,8 +14,10 @@ set vcs_backend_git enabled
 set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 set preview_images true
-set preview_images_method w3m
+#set preview_images_method w3m
 #set preview_images_method ueberzug
+set preview_images_method urxvt-full
+#set preview_images_method mpv
 set unicode_ellipsis false
 set show_hidden_bookmarks false
 set colorscheme default
