--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -183,8 +183,8 @@ ext djvu, has atril,  X, flag f = atril -- "$@"
 #-------------------------------------------
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
-#mime ^image/gif, has mpv, X, flag f = mpv --loop -- "$@"
-mime ^image/gif, has mpv, X, flag f = sxiv -a "$@"
+mime ^image/gif, has mpv, X, flag f = mpv --loop -- "$@"
+#mime ^image/gif, has mpv, X, flag f = sxiv -a "$@"
 mime ^image/gif, has viewnior, X, flag f = viewnior -- "$@"
 mime ^image/gif, has qutebrowser, X, flag f = qutebrowser -- "$@"
 
