--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -55,40 +55,43 @@ urgent_on_bell        =         true
 
 [colors]
 
-foreground            =   #f8f8f2
-background=   #272822
-cursorColor=  #f8f8f2
-# black
-color0                =       #272822
-color8                =       #75715e
+background =   #000000
+foreground =   #d0d0d0
 
-# red
-color1                =       #f92672
-color9                =       #f92672
+cursorColor =  #d0d0d0
 
-# green
-color2                =       #a6e22e
-color10               =       #a6e22e
+colorBD   =   #3579a8
+colorUL   =   #4eb4fa
 
-# yellow
-color3                =       #f4bf75
-color11               =       #f4bf75
 
-# blue
-color4                =       #66d9ef
-color12               =       #66d9ef
+color0    =   #000000
+color8    =   #1c1c1c
 
-# magenta
-color5                =       #ae81ff
-color13               =       #ae81ff
 
-# cyan
-color6                =       #a1efe4
-color14               =       #a1efe4
+color1    =   #960050
+color9    =   #ff0090
 
-# white
-color7                =       #f8f8f2
-color15               =       #f9f8f5
+
+color2    =   #66aa11
+color10   =   #80ff00
+
+color3    =   #c47f2c
+color11   =   #ffba68
+
+
+color4    =   #30309b
+color12   =   #5f5fee
+
+color5    =   #7e40a5
+color13   =   #bb88dd
+
+
+color6    =   #3579a8
+color14   =   #4eb4fa
+
+
+color7    =   #5f5f5f
+color15   =   #d0d0d0
 
 [hints]
 
