zsh is /usr/local/bin/zsh in openbsd

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,8 +21,8 @@ set-option -g prefix `
 bind ` send-prefix
 
 # Shell
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
+set -g default-command $(which zsh)
+set -g default-shell $(which zsh)
 
 # Reload the config
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
