gpg is gpg2, no loadkeys

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -56,7 +56,7 @@
 [difftool "icdiff"]
         cmd = icdiff --line-numbers $LOCAL $REMOTE
 [gpg]
-	program = gpg
+	program = gpg2
 [core]
 	autocrlf = input
 	safecrlf = true
