adding $SHELL to .tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,8 +21,8 @@ set-option -g prefix `
 bind ` send-prefix
 
 # Shell
-set -g default-command $(which zsh)
-set -g default-shell $(which zsh)
+set -g default-command $SHELL
+set -g default-shell $SHELL
 
 # Reload the config
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
