--- a/mbsync/.mbsyncrc
+++ b/mbsync/.mbsyncrc
@@ -1,7 +1,7 @@
 IMAPAccount abdullah
 Host imap.yandex.com
 User abdullah@abdullah.today
-PassCmd "gpg -dq ~/.local/share/misc/abdullah.gpg"
+PassCmd "gpg2 -dq ~/.local/share/misc/abdullah.gpg"
 # PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.mailpass.gpg"
 SSLType IMAPS
 CertificateFile /etc/ssl/certs/ca-certificates.crt
