--- a/msmtp/.msmtprc
+++ b/msmtp/.msmtprc
@@ -10,7 +10,7 @@ host smtp.yandex.com
 port 587
 user abdullah@abdullah.today
 from abdullah@abdullah.today
-passwordeval "echo $(gpg --batch -q --decrypt ~/.local/share/misc/abdullah.gpg)"
+passwordeval "echo $(gpg2 --batch -q --decrypt ~/.local/share/misc/abdullah.gpg)"
 
 account default: ak
 # vim:ft=msmtp
