made gpg2 work ssh

--- a/gpg/.gnupg/gpg-agent.conf
+++ b/gpg/.gnupg/gpg-agent.conf
@@ -1,5 +1,6 @@
 enable-ssh-support
 max-cache-ttl 84000
 default-cache-ttl 84000
-pinentry-program /usr/bin/pinentry-curses
+pinentry-program /usr/local/bin/pinentry-curses
 allow-preset-passphrase
+allow-loopback-pinentry
